<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_build"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/action_build"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_run"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/action_run"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_debug"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_debug"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>